/* 
  Localizable.strings
  Hackerspaces

  Created by zephyz on 04.11.17.
  Copyright © 2017 Fixme. All rights reserved.
*/

//Favorites list
"FavoriteHackerspaceTitle" = "Favorites";
"EmptyFavoriteListMessage" = "Select your favorite hackerspace from search or map";

//CustomEndpoint
"Custom_Endpoint" = "Custom Endpoint"; //Also for Embeded Search
"CustomNameCantBeEmpty" = "Custom endpoint name can't be empty";
"CustomURLCantBeEmpty" = "Custom endpoint URL can't be empty";

//Preference pane
"AdvancedModeEngagedTitle" = "Advanced mode enabled";
"AdvancedModeEngagedMessage" = "Advanced mode displays more advanced features useful for hackerspace API developers";
"PullToEngage" = "Pull to disable Advanced Mode";
"PullToDisengage" = "Pull to enable Advanced Mode";
"DeleteCacheTitle" = "Deleting Cache";
"DeleteCacheMessage" = "Are you sure you want to delete the local cache?";

//ErrorDisplay
"ErrorDisplayViewTitle" = "Error details";
"QuestionIndicator" = "Q" ;
"AnswerIndicator" = "A";
"CannotFindHSQuestion" = "Why can't I find my local hackerspace in the list?";
"CannotFindHSAnswer" = "Only hackerspaces registered on the OpenSpace Directory are visible. For it to be visible in the app, your hackerspace needs to expose an API that conforms to the SpaceAPI.net format and register itself on Open Space Directory.";
"HowToAddHSQuestion" = "How can I add my local hackerspace?";
"HowToAddHSAnswer" = "You will need a server that exposes a public API. Once your API is up and running you can register it's address at the OpenSpace directory  (https://github.com/fixme-lausanne/OpenSpaceDirectory) by making a pull request. Once the pull request is accepted your Hackerspace will be visible in the app. If you want to test your API inside the app before it's added to the Open Space DIrectory you can add it as a custom endpoint in the advanced settings. To enable advanced settings, pull the settings list and select \"ok\".";
"ReportBugQuestion" = "Something is wrong with the app, what can I do?";
"ReportBugAnswer" = "You can communicate any issue with the app on the github repository at https://github.com/zhaar/Hackerspaces-iOS/issues. You can even issue pull requests to enable more functionalities.";

//Embeded Search
"Loading" = "loading";
"Unresponsive" = "unresponsive";

//Selected Hackerspace
"SelectedHSViewTitle" = "hackerspace status";
"AddHSFavorite" = "Add Favorite";
"RemoveHSFavorite" = "Remove Favorite";

// General
"Delete" = "Delete";
"HackerspaceOpen" = "open";
"HackerspaceClosed" = "closed";
"Edit" = "Edit";
"Name" = "Name";
"Ok" = "Ok";
"Search" = "Search";
"More_details" = "More details";

